[package]
name = "runtime-api"
version = "0.1.0"
authors = ["ksr30 <krishna.singh9926@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nft-pallet = { default-features = false, path = "../" }
sp-api = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-arithmetic = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std"]
std = [
    "sp-api/std",
    'sp-core/std',
    'sp-runtime/std'
]